# hsse-fp-2019-2

./: Calculator.scala  LUKINA.docx  README.md  Report.docx  Simple calculator  calc.scala  calculator.hs  calculator.scala  otchet_FP.docx  parsing.hs  reportCourseWork.docx  shreder_ad_3530904_80002.docx
Calculator/: 80004_отчёт_ЛиндеДаниил.docx  consolecalc.py
CoursProject/: Иванов Н. А.docx
CourseProject/: README.md  courseProject_func.docx
CourseWork/: README.md  Отчет по курсовой работе.docx
CourseWorkClustering/: Nurtdinov_Artur_3530904.80002.docx
CurseWork/: NEUPOKOEV.docx
tasks/CourseWork/: Kuznetsov Svyatoslav report course work.docx  LICENSE  Main.hs  Otchet_po_kursovoy_rabote.docx  READ.md  README.md  Rakhmatullin_alexander.docx  calculator.cabal  Отчет по курсовой работе.docx  Отчёт по курсовой работе 3530904_80002 Конев Иван.docx
tasks/CourseWork/Calculator_Scala/src/calculator/: App.scala  Calculator.scala
tasks/CourseWork/calculator/: README.md  build.sbt
tasks/CourseWork/calculator/src/main/scala/: Calculator.scala  Main.scala
tasks/CourseWork/mandelbrot/: Mandelbrot.pgm
tasks/CourseWork/mandelbrot/src/main/scala/: Complex.scala  Main.scala
tasks/CourseWork/src/main/scala/: ComplexNumber.scala  Main.scala
tasks/CourseWork/src/main/scala/calculator/: App.scala  Calculator.scala  Panel.scala
tasks/CourseWork/untitled3/: build.sbt  data.txt
tasks/CourseWork/untitled3/src/main/scala/: Main.scala
tasks/CourseWork/untitled5/: build.sbt
tasks/CourseWork/untitled5/src/main/scala/Calc/: Calculator.scala  Main.scala
(+382 files in other folders)
