name:                calculator
version:             0.1.0.0
synopsis:            Simple GUI calculator, made as a haskell gui proof of concept
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Francesco Gazzetta
maintainer:          francygazz@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.10

executable calculator
  main-is:             Main.hs
  -- other-modules:       
  other-extensions:    CPP, ForeignFunctionInterface
  build-depends:       base >=4.9 && <4.10, filepath >=1.4 && <1.5, containers >=0.5 && <0.6
                     , wx
                     , split
  -- hs-source-dirs:      
  default-language:    Haskell2010
